Add html content for sidebar and header

--- a/index.html
+++ b/index.html
@@ -7,6 +7,76 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="header">
+            <div class="head-top">
+                <div class="search">
+                    <img src="" alt="search icon">
+                    <input type="search">
+                </div>
+                <img src="" alt="notification icon">
+                <img src="" alt="User Profile">
+                <p>Yakubu Peter</p>
+            </div>
+            <div class="head-bottom">
+                <img src="" alt="User Profile">
+                <div class="welcome-user">
+                    <p>Hi there,</p>
+                    <p>Yakubu Peter (@yakubup)</p>
+                </div>
+                <ul>
+                    <li><button>New</button></li>
+                    <li><button>Upload</button></li>
+                    <li><button>Share</button></li>
+                </ul>
+            </div>
+        </div>
+        <div class="sidebar">
+            <div class="sidebar-head">
+                <img src="" alt="dashboard icon">
+                <h1>Dashboard</h1>
+            </div>
+            <ul>
+                <li class="dash-element" id="home">
+                    <img src="" alt="Home">
+                    <p>Home</p>
+                </li>
+                <li class="dash-element" id="profile">
+                    <img src="" alt="profile">
+                    <p>Profile</p>
+                </li>
+                <li class="dash-element" id="messages">
+                    <img src="" alt="messages">
+                    <p>Messages</p>
+                </li>
+                <li class="dash-element" id="history">
+                    <img src="" alt="history">
+                    <p>History</p>
+                </li>
+                <li class="dash-element" id="tasks">
+                    <img src="" alt="tasks">
+                    <p>Tasks</p>
+                </li>
+                <li class="dash-element" id="communities">
+                    <img src="" alt="communities">
+                    <p>Communities</p>
+                </li>
+            </ul>
+            <ul>
+                <li class="dash-element" id="settings">
+                    <img src="" alt="settings">
+                    <p>Settings</p>
+                </li>
+                <li class="dash-element" id="support">
+                    <img src="" alt="support icon">
+                    <p>Support</p>
+                </li>
+                <li class="dash-element" id="privacy">
+                    <img src="" alt="privacy">
+                    <p>Privacy</p>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
