Add layout styling to sidebar

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </div>
         <div class="sidebar">
             <div class="sidebar-head">
-                <img src="" alt="dashboard icon">
+                <img src="" alt="logo">
                 <span>Dashboard</span>
             </div>
-            <ul>
+            <ul class="nav">
                 <li class="dash-element" id="home">
                     <img src="" alt="Home">
                     <p>Home</p>
@@ -63,7 +63,7 @@
                     <p>Communities</p>
                 </li>
             </ul>
-            <ul>
+            <ul class="nav">
                 <li class="dash-element" id="settings">
                     <img src="" alt="settings">
                     <p>Settings</p>
