--- a/index.html
+++ b/index.html
@@ -8,190 +8,188 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <div class="head-top">
-                <div class="search">
-                    <img src="" alt="search icon">
-                    <input type="search">
-                </div>
-                <img src="" alt="notification icon">
-                <img src="" alt="User Profile">
-                <p>Yakubu Peter</p>
+    <div class="sidebar">
+        <div class="sidebar-head">
+            <img src="" alt="logo">
+            <span>Dashboard</span>
+        </div>
+        <ul class="nav">
+            <li class="dash-element" id="home">
+                <img src="" alt="Home">
+                <p>Home</p>
+            </li>
+            <li class="dash-element" id="profile">
+                <img src="" alt="profile">
+                <p>Profile</p>
+            </li>
+            <li class="dash-element" id="messages">
+                <img src="" alt="messages">
+                <p>Messages</p>
+            </li>
+            <li class="dash-element" id="history">
+                <img src="" alt="history">
+                <p>History</p>
+            </li>
+            <li class="dash-element" id="tasks">
+                <img src="" alt="tasks">
+                <p>Tasks</p>
+            </li>
+            <li class="dash-element" id="communities">
+                <img src="" alt="communities">
+                <p>Communities</p>
+            </li>
+        </ul>
+        <ul class="nav">
+            <li class="dash-element" id="settings">
+                <img src="" alt="settings">
+                <p>Settings</p>
+            </li>
+            <li class="dash-element" id="support">
+                <img src="" alt="support icon">
+                <p>Support</p>
+            </li>
+            <li class="dash-element" id="privacy">
+                <img src="" alt="privacy">
+                <p>Privacy</p>
+            </li>
+        </ul>
+    </div>
+    <div class="header">
+        <div class="headTop">
+            <div class="search">
+                <img src="" alt="search icon">
+                <input type="search">
             </div>
-            <div class="head-bottom">
-                <img src="" alt="User Profile">
-                <div class="welcome-user">
-                    <p>Hi there,</p>
-                    <h1>Yakubu Peter (@yakubup)</h1>
-                </div>
+            <img src="" alt="notification icon">
+            <img src="" alt="User Profile">
+            <span>Yakubu Peter</span>
+        </div>
+        <div class="head-bottom">
+            <img src="" alt="User Profile">
+            <div class="welcome-user">
+                <p>Hi there,</p>
+                <h1>Yakubu Peter (@yakubup)</h1>
+            </div>
+            <ul>
+                <li><button>New</button></li>
+                <li><button>Upload</button></li>
+                <li><button>Share</button></li>
+            </ul>
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="projects">
+            <h2>Your Projects</h2>
+            <ul class="project-catalogue">
+                <li class="card">
+                    <h3>Simple Calculator</h3>
+                    <p>I made a simple calculator for simple arithmetic calculations. It has 
+                        symbols including minus, plus, multiply, divide, percentage and equals.
+                        It also allows for deletion and backspacing.
+                    </p>
+                    <div class="card-icons"></div>
+                </li>
+                <li class="card">
+                    <h3>Spaceship game</h3>
+                    <p>I made a spaceship shooter game using java. It is a 2d game and allows
+                        for the user to change direction and many other things while playing.
+                    </p>
+                    <div class="card-icons">
+                        <button style="border: none; background: none;">
+                            <img src="" alt="bookmark button">
+                        </button>
+                        <button style="border: none; background: none;">
+                            <img src="" alt="hide button">
+                        </button>
+                        <button style="border: none; background: none;">
+                            <img src="" alt="share button">
+                        </button>
+                    </div>
+                </li>
+                <li class="card">
+                    <h3>Tic Tac Toe</h3>
+                    <p>I made a simple tictactoe game using java that allows the user to play 
+                        against a computer and it checks for a winner or displays if ther is a draw.
+                    </p>
+                    <div class="card-icons"></div>
+                </li>
+                <li class="card">
+                    <h3>Rock Paper Scissors</h3>
+                    <p>I made a basic webpage for playing rock paper sicssors that allows the user 
+                        to play against the computer. The computer picks random plays and the score is collated 
+                        until someone reaches 5.
+                    </p>
+                    <div class="card-icons"></div>
+                </li>
+                <li class="card">
+                    <h3>Etch A Sketch</h3>
+                    <p>I made a simple web app for a user to make fun designs of a canvas like board with different 
+                        colours
+                    </p>
+                    <div class="card-icons"></div>
+                </li>
+                <li class="card">
+                    <h3>Holy Grail</h3>
+                    <p>Using grid, I tested my skills by making a simple layout of the holy Grail</p>
+                    <div class="card-icons"></div>
+                </li>
+            </ul>
+        </div>
+        <div class="right-bar">
+            <div class="announcments">
+                <h2>Announcments</h2>
                 <ul>
-                    <li><button>New</button></li>
-                    <li><button>Upload</button></li>
-                    <li><button>Share</button></li>
+                    <li>
+                        <h3>Learning ML & AI</h3>
+                        <p>I am planning to learn ML and AI in a nanoprogram by Udacity.</p>
+                    </li>
+                    <li>
+                        <h3>Odin Project</h3>
+                        <p>I am about to finish the first part of the HTML and CSS intermediate course
+                            and this is the last project.
+                        </p>
+                    </li>
+                    <li>
+                        <h3>Java Database</h3>
+                        <p>Still trying to learn how to use a database in Java to make an
+                            inventory management desktop application. Currently using a course on
+                            Udemy to learn. It is quite long but we move.
+                        </p>
+                    </li>
                 </ul>
             </div>
-        </div>
-        <div class="sidebar">
-            <div class="sidebar-head">
-                <img src="" alt="logo">
-                <span>Dashboard</span>
-            </div>
-            <ul class="nav">
-                <li class="dash-element" id="home">
-                    <img src="" alt="Home">
-                    <p>Home</p>
-                </li>
-                <li class="dash-element" id="profile">
-                    <img src="" alt="profile">
-                    <p>Profile</p>
-                </li>
-                <li class="dash-element" id="messages">
-                    <img src="" alt="messages">
-                    <p>Messages</p>
-                </li>
-                <li class="dash-element" id="history">
-                    <img src="" alt="history">
-                    <p>History</p>
-                </li>
-                <li class="dash-element" id="tasks">
-                    <img src="" alt="tasks">
-                    <p>Tasks</p>
-                </li>
-                <li class="dash-element" id="communities">
-                    <img src="" alt="communities">
-                    <p>Communities</p>
-                </li>
-            </ul>
-            <ul class="nav">
-                <li class="dash-element" id="settings">
-                    <img src="" alt="settings">
-                    <p>Settings</p>
-                </li>
-                <li class="dash-element" id="support">
-                    <img src="" alt="support icon">
-                    <p>Support</p>
-                </li>
-                <li class="dash-element" id="privacy">
-                    <img src="" alt="privacy">
-                    <p>Privacy</p>
-                </li>
-            </ul>
-        </div>
-        <div class="main-content">
-            <div class="projects">
-                <h2>Your Projects</h2>
-                <ul class="project-catalogue">
-                    <li class="card">
-                        <h3>Simple Calculator</h3>
-                        <p>I made a simple calculator for simple arithmetic calculations. It has 
-                            symbols including minus, plus, multiply, divide, percentage and equals.
-                            It also allows for deletion and backspacing.
-                        </p>
-                        <div class="card-icons"></div>
-                    </li>
-                    <li class="card">
-                        <h3>Spaceship game</h3>
-                        <p>I made a spaceship shooter game using java. It is a 2d game and allows
-                            for the user to change direction and many other things while playing.
-                        </p>
-                        <div class="card-icons">
-                            <button style="border: none; background: none;">
-                                <img src="" alt="bookmark button">
-                            </button>
-                            <button style="border: none; background: none;">
-                                <img src="" alt="hide button">
-                            </button>
-                            <button style="border: none; background: none;">
-                                <img src="" alt="share button">
-                            </button>
+            <div class="trending">
+                <h2>Trending</h2>
+                <ul>
+                    <li>
+                        <img src="" alt="">
+                        <div class="person-project">
+                            <h3>@tj</h3>
+                            <p>Highest Number Finder</p>
                         </div>
                     </li>
-                    <li class="card">
-                        <h3>Tic Tac Toe</h3>
-                        <p>I made a simple tictactoe game using java that allows the user to play 
-                            against a computer and it checks for a winner or displays if ther is a draw.
-                        </p>
-                        <div class="card-icons"></div>
+                    <li>
+                        <img src="" alt="">
+                        <div class="person-project">
+                            <h3>@derriko</h3>
+                            <p>Car tyre repair</p>
+                        </div>
                     </li>
-                    <li class="card">
-                        <h3>Rock Paper Scissors</h3>
-                        <p>I made a basic webpage for playing rock paper sicssors that allows the user 
-                            to play against the computer. The computer picks random plays and the score is collated 
-                            until someone reaches 5.
-                        </p>
-                        <div class="card-icons"></div>
+                    <li>
+                        <img src="" alt="">
+                        <div class="person-project">
+                            <h3>@Reo</h3>
+                            <p>Crashed Code</p>
+                        </div>
                     </li>
-                    <li class="card">
-                        <h3>Etch A Sketch</h3>
-                        <p>I made a simple web app for a user to make fun designs of a canvas like board with different 
-                            colours
-                        </p>
-                        <div class="card-icons"></div>
-                    </li>
-                    <li class="card">
-                        <h3>Holy Grail</h3>
-                        <p>Using grid, I tested my skills by making a simple layout of the holy Grail</p>
-                        <div class="card-icons"></div>
+                    <li>
+                        <img src="" alt="">
+                        <div class="person-project">
+                            <h3>@frimpong</h3>
+                            <p>Just Jokes</p>
+                        </div>
                     </li>
                 </ul>
-            </div>
-            <div class="right-bar">
-                <div class="announcments">
-                    <h2>Announcments</h2>
-                    <ul>
-                        <li>
-                            <h3>Learning ML & AI</h3>
-                            <p>I am planning to learn ML and AI in a nanoprogram by Udacity.</p>
-                        </li>
-                        <li>
-                            <h3>Odin Project</h3>
-                            <p>I am about to finish the first part of the HTML and CSS intermediate course
-                                and this is the last project.
-                            </p>
-                        </li>
-                        <li>
-                            <h3>Java Database</h3>
-                            <p>Still trying to learn how to use a database in Java to make an
-                                inventory management desktop application. Currently using a course on
-                                Udemy to learn. It is quite long but we move.
-                            </p>
-                        </li>
-                    </ul>
-                </div>
-                <div class="trending">
-                    <h2>Trending</h2>
-                    <ul>
-                        <li>
-                            <img src="" alt="">
-                            <div class="person-project">
-                                <h3>@tj</h3>
-                                <p>Highest Number Finder</p>
-                            </div>
-                        </li>
-                        <li>
-                            <img src="" alt="">
-                            <div class="person-project">
-                                <h3>@derriko</h3>
-                                <p>Car tyre repair</p>
-                            </div>
-                        </li>
-                        <li>
-                            <img src="" alt="">
-                            <div class="person-project">
-                                <h3>@Reo</h3>
-                                <p>Crashed Code</p>
-                            </div>
-                        </li>
-                        <li>
-                            <img src="" alt="">
-                            <div class="person-project">
-                                <h3>@frimpong</h3>
-                                <p>Just Jokes</p>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
             </div>
         </div>
     </div>
