--- a/index.html
+++ b/index.html
@@ -10,46 +10,46 @@
 <body>
     <div class="sidebar">
         <div class="sidebar-head">
-            <img src="" alt="logo">
+            <img src="assets/cube.svg" alt="logo" id="logo">
             <span>Dashboard</span>
         </div>
-        <ul class="nav">
+        <ul class="nav top">
             <li class="dash-element" id="home">
-                <img src="" alt="Home">
+                <img src="assets/home.svg" alt="Home">
                 <p>Home</p>
             </li>
             <li class="dash-element" id="profile">
-                <img src="" alt="profile">
+                <img src="assets/face-man-profile.svg" alt="profile">
                 <p>Profile</p>
             </li>
             <li class="dash-element" id="messages">
-                <img src="" alt="messages">
+                <img src="assets/message-reply.svg" alt="messages">
                 <p>Messages</p>
             </li>
             <li class="dash-element" id="history">
-                <img src="" alt="history">
+                <img src="assets/history.svg" alt="history">
                 <p>History</p>
             </li>
             <li class="dash-element" id="tasks">
-                <img src="" alt="tasks">
+                <img src="assets/calendar-check.svg" alt="tasks">
                 <p>Tasks</p>
             </li>
             <li class="dash-element" id="communities">
-                <img src="" alt="communities">
+                <img src="assets/account-group.svg" alt="communities">
                 <p>Communities</p>
             </li>
         </ul>
-        <ul class="nav">
+        <ul class="nav bottom">
             <li class="dash-element" id="settings">
-                <img src="" alt="settings">
+                <img src="assets/cog-outline.svg" alt="settings">
                 <p>Settings</p>
             </li>
             <li class="dash-element" id="support">
-                <img src="" alt="support icon">
+                <img src="assets/face-agent.svg" alt="support icon">
                 <p>Support</p>
             </li>
             <li class="dash-element" id="privacy">
-                <img src="" alt="privacy">
+                <img src="assets/lock.svg" alt="privacy">
                 <p>Privacy</p>
             </li>
         </ul>
@@ -57,12 +57,14 @@
     <div class="header">
         <div class="headTop">
             <div class="search">
-                <img src="" alt="search icon">
+                <img src="assets/magnify.svg" alt="search icon" height="30px">
                 <input type="search">
             </div>
-            <img src="" alt="notification icon">
-            <img src="" alt="User Profile">
-            <span>Yakubu Peter</span>
+            <div class="align-right">
+                <img src="assets/bell-ring.svg" alt="notification icon" height="30px">
+                <img src="" alt="User Profile">
+                <span>Yakubu Peter</span>
+            </div>
         </div>
         <div class="head-bottom">
             <img src="" alt="User Profile">
@@ -87,7 +89,17 @@
                         symbols including minus, plus, multiply, divide, percentage and equals.
                         It also allows for deletion and backspacing.
                     </p>
-                    <div class="card-icons"></div>
+                    <div class="card-icons">
+                        <button style="border: none; background: none;">
+                            <img src="assets/bookmark-outline.svg" alt="bookmark button">
+                        </button>
+                        <button style="border: none; background: none;">
+                            <img src="assets/eye.svg" alt="hide button">
+                        </button>
+                        <button style="border: none; background: none;">
+                            <img src="assets/share-variant-outline.svg" alt="share button">
+                        </button>
+                    </div>
                 </li>
                 <li class="card">
                     <h3>Spaceship game</h3>
@@ -96,13 +108,13 @@
                     </p>
                     <div class="card-icons">
                         <button style="border: none; background: none;">
-                            <img src="" alt="bookmark button">
+                            <img src="assets/bookmark-outline.svg" alt="bookmark button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="" alt="hide button">
+                            <img src="assets/eye.svg" alt="hide button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="" alt="share button">
+                            <img src="assets/share-variant-outline.svg" alt="share button">
                         </button>
                     </div>
                 </li>
@@ -111,7 +123,17 @@
                     <p>I made a simple tictactoe game using java that allows the user to play 
                         against a computer and it checks for a winner or displays if ther is a draw.
                     </p>
-                    <div class="card-icons"></div>
+                    <div class="card-icons">
+                        <button style="border: none; background: none;">
+                            <img src="assets/bookmark-outline.svg" alt="bookmark button">
+                        </button>
+                        <button style="border: none; background: none;">
+                            <img src="assets/eye.svg" alt="hide button">
+                        </button>
+                        <button style="border: none; background: none;">
+                            <img src="assets/share-variant-outline.svg" alt="share button">
+                        </button>
+                    </div>
                 </li>
                 <li class="card">
                     <h3>Rock Paper Scissors</h3>
@@ -119,78 +141,106 @@
                         to play against the computer. The computer picks random plays and the score is collated 
                         until someone reaches 5.
                     </p>
-                    <div class="card-icons"></div>
+                    <div class="card-icons">
+                        <button style="border: none; background: none;">
+                            <img src="assets/bookmark-outline.svg" alt="bookmark button">
+                        </button>
+                        <button style="border: none; background: none;">
+                            <img src="assets/eye.svg" alt="hide button">
+                        </button>
+                        <button style="border: none; background: none;">
+                            <img src="assets/share-variant-outline.svg" alt="share button">
+                        </button>
+                    </div>
                 </li>
                 <li class="card">
                     <h3>Etch A Sketch</h3>
                     <p>I made a simple web app for a user to make fun designs of a canvas like board with different 
                         colours
                     </p>
-                    <div class="card-icons"></div>
+                    <div class="card-icons">
+                        <button style="border: none; background: none;">
+                            <img src="assets/bookmark-outline.svg" alt="bookmark button">
+                        </button>
+                        <button style="border: none; background: none;">
+                            <img src="assets/eye.svg" alt="hide button">
+                        </button>
+                        <button style="border: none; background: none;">
+                            <img src="assets/share-variant-outline.svg" alt="share button">
+                        </button>
+                    </div>
                 </li>
                 <li class="card">
                     <h3>Holy Grail</h3>
                     <p>Using grid, I tested my skills by making a simple layout of the holy Grail</p>
-                    <div class="card-icons"></div>
+                    <div class="card-icons">
+                        <button style="border: none; background: none;">
+                            <img src="assets/bookmark-outline.svg" alt="bookmark button">
+                        </button>
+                        <button style="border: none; background: none;">
+                            <img src="assets/eye.svg" alt="hide button">
+                        </button>
+                        <button style="border: none; background: none;">
+                            <img src="assets/share-variant-outline.svg" alt="share button">
+                        </button>
+                    </div>
                 </li>
             </ul>
         </div>
-        <div class="right-bar">
-            <div class="announcments">
-                <h2>Announcments</h2>
-                <ul>
-                    <li>
-                        <h3>Learning ML & AI</h3>
-                        <p>I am planning to learn ML and AI in a nanoprogram by Udacity.</p>
-                    </li>
-                    <li>
-                        <h3>Odin Project</h3>
-                        <p>I am about to finish the first part of the HTML and CSS intermediate course
-                            and this is the last project.
-                        </p>
-                    </li>
-                    <li>
-                        <h3>Java Database</h3>
-                        <p>Still trying to learn how to use a database in Java to make an
-                            inventory management desktop application. Currently using a course on
-                            Udemy to learn. It is quite long but we move.
-                        </p>
-                    </li>
-                </ul>
-            </div>
-            <div class="trending">
-                <h2>Trending</h2>
-                <ul>
-                    <li>
-                        <img src="" alt="">
-                        <div class="person-project">
-                            <h3>@tj</h3>
-                            <p>Highest Number Finder</p>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="" alt="">
-                        <div class="person-project">
-                            <h3>@derriko</h3>
-                            <p>Car tyre repair</p>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="" alt="">
-                        <div class="person-project">
-                            <h3>@Reo</h3>
-                            <p>Crashed Code</p>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="" alt="">
-                        <div class="person-project">
-                            <h3>@frimpong</h3>
-                            <p>Just Jokes</p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
+        <div class="announcments">
+            <h2>Announcments</h2>
+            <ul>
+                <li>
+                    <h3>Learning ML & AI</h3>
+                    <p>I am planning to learn ML and AI in a nanoprogram by Udacity.</p>
+                </li>
+                <li>
+                    <h3>Odin Project</h3>
+                    <p>I am about to finish the first part of the HTML and CSS intermediate course
+                        and this is the last project.
+                    </p>
+                </li>
+                <li>
+                    <h3>Java Database</h3>
+                    <p>Still trying to learn how to use a database in Java to make an
+                        inventory management desktop application. Currently using a course on
+                        Udemy to learn. It is quite long but we move.
+                    </p>
+                </li>
+            </ul>
+        </div>
+        <div class="trending">
+            <h2>Trending</h2>
+            <ul>
+                <li>
+                    <img src="" alt="p1">
+                    <div class="person-project">
+                        <h3>@tj</h3>
+                        <p>Highest Number Finder</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="" alt="p2">
+                    <div class="person-project">
+                        <h3>@derriko</h3>
+                        <p>Car tyre repair</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="" alt="p3">
+                    <div class="person-project">
+                        <h3>@Reo</h3>
+                        <p>Crashed Code</p>
+                    </div>
+                </li>
+                <li>
+                    <img src="" alt="p4">
+                    <div class="person-project">
+                        <h3>@frimpong</h3>
+                        <p>Just Jokes</p>
+                    </div>
+                </li>
+            </ul>
         </div>
     </div>
 </body>
