Finish all tasks

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="sidebar">
         <div class="sidebar-head">
             <img src="assets/cube.svg" alt="logo" id="logo">
-            <span>Dashboard</span>
+            <span style="font-size: 1.5rem; font-weight: 700; color: white;">Dashboard</span>
         </div>
         <ul class="nav top">
             <li class="dash-element" id="home">
@@ -62,12 +62,12 @@
             </div>
             <div class="align-right">
                 <img src="assets/bell-ring.svg" alt="notification icon" height="30px">
-                <img src="" alt="User Profile">
+                <img src="assets/9088713.jpg" alt="User Profile">
                 <span>Yakubu Peter</span>
             </div>
         </div>
         <div class="head-bottom">
-            <img src="" alt="User Profile">
+            <img src="assets/9088713.jpg" alt="User Profile">
             <div class="welcome-user">
                 <p>Hi there,</p>
                 <h1>Yakubu Peter (@yakubup)</h1>
@@ -194,12 +194,14 @@
                     <h3>Learning ML & AI</h3>
                     <p>I am planning to learn ML and AI in a nanoprogram by Udacity.</p>
                 </li>
+                <hr>
                 <li>
                     <h3>Odin Project</h3>
                     <p>I am about to finish the first part of the HTML and CSS intermediate course
                         and this is the last project.
                     </p>
                 </li>
+                <hr>
                 <li>
                     <h3>Java Database</h3>
                     <p>Still trying to learn how to use a database in Java to make an
@@ -213,28 +215,28 @@
             <h2>Trending</h2>
             <ul>
                 <li>
-                    <img src="" alt="p1">
+                    <img src="assets/9088054.jpg" alt="p1">
                     <div class="person-project">
                         <h3>@tj</h3>
                         <p>Highest Number Finder</p>
                     </div>
                 </li>
                 <li>
-                    <img src="" alt="p2">
+                    <img src="assets/9088013.jpg" alt="p2">
                     <div class="person-project">
                         <h3>@derriko</h3>
                         <p>Car tyre repair</p>
                     </div>
                 </li>
                 <li>
-                    <img src="" alt="p3">
+                    <img src="assets/download.png" alt="p3">
                     <div class="person-project">
                         <h3>@Reo</h3>
                         <p>Crashed Code</p>
                     </div>
                 </li>
                 <li>
-                    <img src="" alt="p4">
+                    <img src="assets/download.jpeg" alt="p4">
                     <div class="person-project">
                         <h3>@frimpong</h3>
                         <p>Just Jokes</p>
