Move assets to images

--- a/index.html
+++ b/index.html
@@ -10,46 +10,46 @@
 <body>
     <div class="sidebar">
         <div class="sidebar-head">
-            <img src="assets/cube.svg" alt="logo" id="logo">
+            <img src="images/cube.svg" alt="logo" id="logo">
             <span style="font-size: 1.5rem; font-weight: 700; color: white;">Dashboard</span>
         </div>
         <ul class="nav top">
             <li class="dash-element" id="home">
-                <img src="assets/home.svg" alt="Home">
+                <img src="images/home.svg" alt="Home">
                 <p>Home</p>
             </li>
             <li class="dash-element" id="profile">
-                <img src="assets/face-man-profile.svg" alt="profile">
+                <img src="images/face-man-profile.svg" alt="profile">
                 <p>Profile</p>
             </li>
             <li class="dash-element" id="messages">
-                <img src="assets/message-reply.svg" alt="messages">
+                <img src="images/message-reply.svg" alt="messages">
                 <p>Messages</p>
             </li>
             <li class="dash-element" id="history">
-                <img src="assets/history.svg" alt="history">
+                <img src="images/history.svg" alt="history">
                 <p>History</p>
             </li>
             <li class="dash-element" id="tasks">
-                <img src="assets/calendar-check.svg" alt="tasks">
+                <img src="images/calendar-check.svg" alt="tasks">
                 <p>Tasks</p>
             </li>
             <li class="dash-element" id="communities">
-                <img src="assets/account-group.svg" alt="communities">
+                <img src="images/account-group.svg" alt="communities">
                 <p>Communities</p>
             </li>
         </ul>
         <ul class="nav bottom">
             <li class="dash-element" id="settings">
-                <img src="assets/cog-outline.svg" alt="settings">
+                <img src="images/cog-outline.svg" alt="settings">
                 <p>Settings</p>
             </li>
             <li class="dash-element" id="support">
-                <img src="assets/face-agent.svg" alt="support icon">
+                <img src="images/face-agent.svg" alt="support icon">
                 <p>Support</p>
             </li>
             <li class="dash-element" id="privacy">
-                <img src="assets/lock.svg" alt="privacy">
+                <img src="images/lock.svg" alt="privacy">
                 <p>Privacy</p>
             </li>
         </ul>
@@ -57,17 +57,17 @@
     <div class="header">
         <div class="headTop">
             <div class="search">
-                <img src="assets/magnify.svg" alt="search icon" height="30px">
+                <img src="images/magnify.svg" alt="search icon" height="30px">
                 <input type="search">
             </div>
             <div class="align-right">
-                <img src="assets/bell-ring.svg" alt="notification icon" height="30px">
-                <img src="assets/9088713.jpg" alt="User Profile">
+                <img src="images/bell-ring.svg" alt="notification icon" height="30px">
+                <img src="images/9088713.jpg" alt="User Profile">
                 <span>Yakubu Peter</span>
             </div>
         </div>
         <div class="head-bottom">
-            <img src="assets/9088713.jpg" alt="User Profile">
+            <img src="images/9088713.jpg" alt="User Profile">
             <div class="welcome-user">
                 <p>Hi there,</p>
                 <h1>Yakubu Peter (@yakubup)</h1>
@@ -91,13 +91,13 @@
                     </p>
                     <div class="card-icons">
                         <button style="border: none; background: none;">
-                            <img src="assets/bookmark-outline.svg" alt="bookmark button">
+                            <img src="images/bookmark-outline.svg" alt="bookmark button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="assets/eye.svg" alt="hide button">
+                            <img src="images/eye.svg" alt="hide button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="assets/share-variant-outline.svg" alt="share button">
+                            <img src="images/share-variant-outline.svg" alt="share button">
                         </button>
                     </div>
                 </li>
@@ -108,13 +108,13 @@
                     </p>
                     <div class="card-icons">
                         <button style="border: none; background: none;">
-                            <img src="assets/bookmark-outline.svg" alt="bookmark button">
+                            <img src="images/bookmark-outline.svg" alt="bookmark button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="assets/eye.svg" alt="hide button">
+                            <img src="images/eye.svg" alt="hide button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="assets/share-variant-outline.svg" alt="share button">
+                            <img src="images/share-variant-outline.svg" alt="share button">
                         </button>
                     </div>
                 </li>
@@ -125,13 +125,13 @@
                     </p>
                     <div class="card-icons">
                         <button style="border: none; background: none;">
-                            <img src="assets/bookmark-outline.svg" alt="bookmark button">
+                            <img src="images/bookmark-outline.svg" alt="bookmark button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="assets/eye.svg" alt="hide button">
+                            <img src="images/eye.svg" alt="hide button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="assets/share-variant-outline.svg" alt="share button">
+                            <img src="images/share-variant-outline.svg" alt="share button">
                         </button>
                     </div>
                 </li>
@@ -143,13 +143,13 @@
                     </p>
                     <div class="card-icons">
                         <button style="border: none; background: none;">
-                            <img src="assets/bookmark-outline.svg" alt="bookmark button">
+                            <img src="images/bookmark-outline.svg" alt="bookmark button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="assets/eye.svg" alt="hide button">
+                            <img src="images/eye.svg" alt="hide button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="assets/share-variant-outline.svg" alt="share button">
+                            <img src="images/share-variant-outline.svg" alt="share button">
                         </button>
                     </div>
                 </li>
@@ -160,13 +160,13 @@
                     </p>
                     <div class="card-icons">
                         <button style="border: none; background: none;">
-                            <img src="assets/bookmark-outline.svg" alt="bookmark button">
+                            <img src="images/bookmark-outline.svg" alt="bookmark button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="assets/eye.svg" alt="hide button">
+                            <img src="images/eye.svg" alt="hide button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="assets/share-variant-outline.svg" alt="share button">
+                            <img src="images/share-variant-outline.svg" alt="share button">
                         </button>
                     </div>
                 </li>
@@ -175,13 +175,13 @@
                     <p>Using grid, I tested my skills by making a simple layout of the holy Grail</p>
                     <div class="card-icons">
                         <button style="border: none; background: none;">
-                            <img src="assets/bookmark-outline.svg" alt="bookmark button">
+                            <img src="images/bookmark-outline.svg" alt="bookmark button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="assets/eye.svg" alt="hide button">
+                            <img src="images/eye.svg" alt="hide button">
                         </button>
                         <button style="border: none; background: none;">
-                            <img src="assets/share-variant-outline.svg" alt="share button">
+                            <img src="images/share-variant-outline.svg" alt="share button">
                         </button>
                     </div>
                 </li>
@@ -215,28 +215,28 @@
             <h2>Trending</h2>
             <ul>
                 <li>
-                    <img src="assets/9088054.jpg" alt="p1">
+                    <img src="images/9088054.jpg" alt="p1">
                     <div class="person-project">
                         <h3>@tj</h3>
                         <p>Highest Number Finder</p>
                     </div>
                 </li>
                 <li>
-                    <img src="assets/9088013.jpg" alt="p2">
+                    <img src="images/9088013.jpg" alt="p2">
                     <div class="person-project">
                         <h3>@derriko</h3>
                         <p>Car tyre repair</p>
                     </div>
                 </li>
                 <li>
-                    <img src="assets/download.png" alt="p3">
+                    <img src="images/download.png" alt="p3">
                     <div class="person-project">
                         <h3>@Reo</h3>
                         <p>Crashed Code</p>
                     </div>
                 </li>
                 <li>
-                    <img src="assets/download.jpeg" alt="p4">
+                    <img src="images/download.jpeg" alt="p4">
                     <div class="person-project">
                         <h3>@frimpong</h3>
                         <p>Just Jokes</p>
